# TermInv

./: README.md  pyproject.toml
src/domain/groups/: add_inventory.py  select_inventory.py  view_inventory.py
src/domain/models/: __init__.py  database.py  database_settings.py  dependency_injection.py  injection.py  inventario.py  inventory.py  item.py
src/domain/services/controllers/: __init__.py  database_controller.py  editar_inventario_controller.py  editar_item_controller.py
src/domain/usecases/: __init__.py  adicionar_item.py  alterar_inventario.py  create_inventory.py  create_item.py  get_database.py  get_database_controller.py  registrar_inventario.py  remover_item.py  vizualizar_inventario.py
src/infrastructure/core_bridge_adapters/: core_bridge_adapter.py
src/infrastructure/core_dependency_injection_factories/: core_dependency_injection_factory_json.py
src/infrastructure/database_connection_factories/: __init__.py  database_connection_mysql.py
src/infrastructure/database_controller_factories/: __init__.py  database_controller_factory_mysql.py
src/infrastructure/database_controllers/: __init__.py  database_controller_mysql.py
src/infrastructure/inventory_factories/: __init__.py  inventory_factory_input.py
src/infrastructure/inventory_repositories/: __init__.py  inventory_repository_mysql.py
src/infrastructure/item_factories/: __init__.py  item_factory_input.py
src/infrastructure/item_repositories/: __init__.py  item_repository_mysql.py
tests/: testing_area.py
utils/: database_settings.json  dependency_injections.json
(+10 files in other folders)
