[tool.poetry]
name = "terminv"
version = "0.1.0"
description = "Terminal inventory system for D&D"
authors = ["Octávio Hernandez <octaviocordeiro0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
