[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Octávio Hernandez <octaviocordeiro0@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
